// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCompositeGroup should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: default;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
        disabled=""
      >
        <label
          class="c1"
          data-field-id="checkboxFieldCities"
          disabled=""
        >
          <input
            class="c2"
            disabled=""
            id="checkboxFieldCities"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Города :
          </div>
        </label>
        <div
          class="c8 c9"
          disabled=""
        >
          <label
            class="c1"
            data-field-id="checkboxField1"
            data-field-name="Москва"
            disabled=""
          >
            <input
              class="c10"
              disabled=""
              id="checkboxField1"
              name="Москва"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
                disabled=""
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
              disabled=""
            >
              Москва
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField2"
            data-field-name="Воронеж"
            disabled=""
          >
            <input
              class="c10"
              disabled=""
              id="checkboxField2"
              name="Воронеж"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
                disabled=""
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
              disabled=""
            >
              Воронеж
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField3"
            data-field-name="Самара"
            disabled=""
          >
            <input
              class="c10"
              disabled=""
              id="checkboxField3"
              name="Самара"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
                disabled=""
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
              disabled=""
            >
              Самара
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField4"
            data-field-name="Омск"
            disabled=""
          >
            <input
              class="c10"
              disabled=""
              id="checkboxField4"
              name="Омск"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
                disabled=""
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
              disabled=""
            >
              Омск
            </div>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: default;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
      disabled=""
    >
      <label
        class="c1"
        data-field-id="checkboxFieldCities"
        disabled=""
      >
        <input
          class="c2"
          disabled=""
          id="checkboxFieldCities"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
            disabled=""
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
          disabled=""
        >
          Города :
        </div>
      </label>
      <div
        class="c8 c9"
        disabled=""
      >
        <label
          class="c1"
          data-field-id="checkboxField1"
          data-field-name="Москва"
          disabled=""
        >
          <input
            class="c10"
            disabled=""
            id="checkboxField1"
            name="Москва"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField2"
          data-field-name="Воронеж"
          disabled=""
        >
          <input
            class="c10"
            disabled=""
            id="checkboxField2"
            name="Воронеж"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField3"
          data-field-name="Самара"
          disabled=""
        >
          <input
            class="c10"
            disabled=""
            id="checkboxField3"
            name="Самара"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Самара
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField4"
          data-field-name="Омск"
          disabled=""
        >
          <input
            class="c10"
            disabled=""
            id="checkboxField4"
            name="Омск"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Омск
          </div>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCompositeGroup should render component with label 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldCities"
        >
          <input
            class="c2"
            id="checkboxFieldCities"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Города :
          </div>
        </label>
        <div
          class="c8 c9"
        >
          <label
            class="c1"
            data-field-id="checkboxField1"
            data-field-name="Москва"
          >
            <input
              class="c10"
              id="checkboxField1"
              name="Москва"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Москва
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField2"
            data-field-name="Воронеж"
          >
            <input
              class="c10"
              id="checkboxField2"
              name="Воронеж"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Воронеж
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField3"
            data-field-name="Самара"
          >
            <input
              class="c10"
              id="checkboxField3"
              name="Самара"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Самара
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField4"
            data-field-name="Омск"
          >
            <input
              class="c10"
              id="checkboxField4"
              name="Омск"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Омск
            </div>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldCities"
      >
        <input
          class="c2"
          id="checkboxFieldCities"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Города :
        </div>
      </label>
      <div
        class="c8 c9"
      >
        <label
          class="c1"
          data-field-id="checkboxField1"
          data-field-name="Москва"
        >
          <input
            class="c10"
            id="checkboxField1"
            name="Москва"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField2"
          data-field-name="Воронеж"
        >
          <input
            class="c10"
            id="checkboxField2"
            name="Воронеж"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField3"
          data-field-name="Самара"
        >
          <input
            class="c10"
            id="checkboxField3"
            name="Самара"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField4"
          data-field-name="Омск"
        >
          <input
            class="c10"
            id="checkboxField4"
            name="Омск"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Омск
          </div>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCompositeGroup should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 12px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 25px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldCities"
        >
          <input
            class="c2"
            id="checkboxFieldCities"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Города :
          </div>
        </label>
        <div
          class="c8 c9"
        >
          <label
            class="c1"
            data-field-id="checkboxField1"
            data-field-name="Москва"
          >
            <input
              class="c10"
              id="checkboxField1"
              name="Москва"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Москва
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField2"
            data-field-name="Воронеж"
          >
            <input
              class="c10"
              id="checkboxField2"
              name="Воронеж"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Воронеж
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField3"
            data-field-name="Самара"
          >
            <input
              class="c10"
              id="checkboxField3"
              name="Самара"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Самара
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField4"
            data-field-name="Омск"
          >
            <input
              class="c10"
              id="checkboxField4"
              name="Омск"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Омск
            </div>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 12px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 25px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldCities"
      >
        <input
          class="c2"
          id="checkboxFieldCities"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Города :
        </div>
      </label>
      <div
        class="c8 c9"
      >
        <label
          class="c1"
          data-field-id="checkboxField1"
          data-field-name="Москва"
        >
          <input
            class="c10"
            id="checkboxField1"
            name="Москва"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField2"
          data-field-name="Воронеж"
        >
          <input
            class="c10"
            id="checkboxField2"
            name="Воронеж"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField3"
          data-field-name="Самара"
        >
          <input
            class="c10"
            id="checkboxField3"
            name="Самара"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField4"
          data-field-name="Омск"
        >
          <input
            class="c10"
            id="checkboxField4"
            name="Омск"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Омск
          </div>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCompositeGroup should render components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldCities"
        >
          <input
            class="c2"
            id="checkboxFieldCities"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Города :
          </div>
        </label>
        <div
          class="c8 c9"
        >
          <label
            class="c1"
            data-field-id="checkboxField1"
            data-field-name="Москва"
          >
            <input
              class="c10"
              id="checkboxField1"
              name="Москва"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Москва
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField2"
            data-field-name="Воронеж"
          >
            <input
              class="c10"
              id="checkboxField2"
              name="Воронеж"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Воронеж
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField3"
            data-field-name="Самара"
          >
            <input
              class="c10"
              id="checkboxField3"
              name="Самара"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Самара
            </div>
          </label>
          <label
            class="c1"
            data-field-id="checkboxField4"
            data-field-name="Омск"
          >
            <input
              class="c10"
              id="checkboxField4"
              name="Омск"
              type="checkbox"
            />
            <div
              class="c3"
            >
              <div
                class="c4"
              />
              <span
                class="c5"
              >
                <div
                  aria-hidden="true"
                  class="c11"
                  focusable="false"
                />
              </span>
            </div>
            <div
              class="c7"
            >
              Омск
            </div>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": .c9 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c9>* {
  margin-top: 16px;
}

.c0 {
  position: relative;
  width: fit-content;
  display: flex;
  flex-flow: column;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>.c8 {
  padding-left: 30px;
}

.c1 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: #B0B5BD;
  cursor: default;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: default;
}

.c2:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c2:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c2:not(:disabled):not(:checked)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c2:not(:disabled) >* {
  display: block;
}

.c10 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c10 ::-ms-check {
  display: none;
}

.c10:disabled {
  cursor: default;
}

.c10:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c10:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c10:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c10:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c10:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c10:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c10:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c10:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: #E5E7EB;
}

.c11 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c7.c7 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldCities"
      >
        <input
          class="c2"
          id="checkboxFieldCities"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Города :
        </div>
      </label>
      <div
        class="c8 c9"
      >
        <label
          class="c1"
          data-field-id="checkboxField1"
          data-field-name="Москва"
        >
          <input
            class="c10"
            id="checkboxField1"
            name="Москва"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField2"
          data-field-name="Воронеж"
        >
          <input
            class="c10"
            id="checkboxField2"
            name="Воронеж"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField3"
          data-field-name="Самара"
        >
          <input
            class="c10"
            id="checkboxField3"
            name="Самара"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxField4"
          data-field-name="Омск"
        >
          <input
            class="c10"
            id="checkboxField4"
            name="Омск"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c11"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Омск
          </div>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
